force-app/main/default/objects/ProcessComponent__c/ProcessComponent__c.object-meta.xml
<CustomObject>
    <label>Process Component</label>
    <nameField>
        <displayFormat>PC-{00000000}</displayFormat>
        <label>Process Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>