force-app/main/default/objects/ProcessComponent__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>Process Components</relationshipLabel>
    <relationshipName>ProcessComponents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>