force-app/main/default/objects/ProcessComponent__c/fields/IsOutput__c.field-meta.xml
<CustomField>
    <fullName>IsOutput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Output</label>
    <type>Checkbox</type>
</CustomField>