force-app/main/default/objects/ProcessComponent__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Process Components</relationshipLabel>
    <relationshipName>ProcessComponents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>